@@ -198,8 +198,7 @@
 
     <p>
         Below are example images to demonstrate wide-gamut. There
-        are multiple versions of each image: one in sRGB, which is the
-        typical color space we've been using on the Web for years, then
+        are multiple versions of each image: one in sRGB, then
         some in other color spaces with a wider gamut, and then a version
         where the pixels outside sRGB have been highlighted.
     </p>
@@ -217,8 +216,12 @@
     </p>
     <p>
         If you're not using a wide-gamut display to view these images,
-        the different versions should quite similar, although color
-        matching might produce a small difference.
+        the different versions might be quite similar, although color
+        matching might produce a difference.
+    </p>
+    <p>
+        There is also a <a href="comparison">more interactive version</a>
+        of these examples, with a slider to reveal the wide-gamut images.
     </p>
 
     <section class="photo shoes">
